Restore JVM Tuning section in README
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>